# ioalg-project1

./: .gitignore  BinElement.cpp  BinElement.h  Binary.cpp  Binary.h  CMakeLists.txt  InputStreamA.cpp  InputStreamA.h  InputStreamB.h  InputStreamC.cpp  InputStreamC.h  InputStreamD.cpp  InputStreamD.h  OutputStreamA.cpp  OutputStreamA.h  OutputStreamB.cpp  OutputStreamB.h  OutputStreamC.cpp  OutputStreamC.h  OutputStreamD.cpp  OutputStreamD.h  OutputStreamInterface.h  Part3.cpp  Part3.h  Quicksort.cpp  Quicksort.h  README.md  main.cpp
